--- a/runs/detect/train3/args.yaml
+++ b/runs/detect/train3/args.yaml
@@ -1,8 +1,8 @@
 task: detect
 mode: train
-model: yolo11n.pt
+model: best.pt
 data: datasets/data.yaml
-epochs: 50
+epochs: 10
 time: null
 patience: 100
 batch: 16
@@ -13,7 +13,7 @@ cache: false
 device: null
 workers: 8
 project: null
-name: train3
+name: train2
 exist_ok: false
 pretrained: true
 optimizer: auto
@@ -103,4 +103,4 @@ erasing: 0.4
 crop_fraction: 1.0
 cfg: null
 tracker: botsort.yaml
-save_dir: runs/detect/train3
+save_dir: runs/detect/train2
