--- a/runs/detect/train/args.yaml
+++ b/runs/detect/train/args.yaml
@@ -1,8 +1,8 @@
 task: detect
 mode: train
-model: yolo11n.pt
-data: datasets/data.yaml
-epochs: 100
+model: yolo11m.pt
+data: /content/GARBAGE-CLASSIFICATION-3-2/data.yaml
+epochs: 40
 time: null
 patience: 100
 batch: 16
